# SentimentAndIntentAnalysis

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.in  requirements.txt  setup.cfg
build_package/: sentiment_intent_analysis-0.1.0-py3-none-any.whl
config/: config.ini
data/: transcript_1.json  transcript_2.json
sentiment_intent_analysis/: setup.py
sentiment_intent_analysis/config/: config.ini
sentiment_intent_analysis/data/input/: transcript_0.json  transcript_1.json  transcript_3.json
sentiment_intent_analysis/data/output/: transcript_0_intent_result.json  transcript_0_sentiment_result.json  transcript_1_intent_result.json  transcript_1_sentiment_result.json  transcript_2_intent_result.json  transcript_2_sentiment_result.json  transcript_3_intent_result.json  transcript_3_sentiment_result.json
sentiment_intent_analysis/resources/bart-large-mnli/: config.json  tokenizer.json  tokenizer_config.json
sentiment_intent_analysis/src/: main.py  utils.py
src/: main.py  utils.py
tests/fixtures/: example.py
tests/unit/: test_service.py  test_utils.py
tests/unit/fixtures/: example.py
