[metadata]
name = sentiment_intent_analysis
version = attr: sentiment_intent_analysis.__version__
description = sentiment and intent analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EngincanVaran/SentimentAndIntentAnalysis
author = Engincan Varan
author_email = engincanvaran@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    torch>=2.0.0,<2.1.0
    transformers>=4.33.0,<4.34.0
python_requires = >=3.11
package_dir =
    =sentiment_intent_analysis

[options.packages.find]
where = sentiment_intent_analysis
